(ui/Common/SegmentedControl) fix spacing issue

--- a/packages/app/src/ui/Common/SegmentedControl/index.scss
+++ b/packages/app/src/ui/Common/SegmentedControl/index.scss
@@ -35,7 +35,7 @@
 
 		&.active {
 			background-color: var(--separator-secondary);
-			border: 1px solid var(--separator-primary);
+			box-shadow: inset 0 0 0px 1px var(--separator-primary);
 			color: var(--color-primary);
 		}
 	}
